crates/dsl-core/tests/snapshots/dag_golden__dag_screening_full_suite.snap
---
source: crates/dsl-core/tests/dag_golden.rs
expression: compiled
---
CompiledSteps {
    steps: [
        CompileStep {
            verb_call: VerbCall {
                domain: "screening",
                verb: "pep",
                arguments: [
                    Argument {
                        key: "entity-id",
                        value: SymbolRef {
                            name: "entity",
                            span: Span {
                                start: 35,
                                end: 42,
                            },
                        },
                        span: Span {
                            start: 24,
                            end: 42,
                        },
                    },
                    Argument {
                        key: "provider",
                        value: Literal(
                            String(
                                "worldcheck",
                            ),
                            Span {
                                start: 53,
                                end: 65,
                            },
                        ),
                        span: Span {
                            start: 43,
                            end: 65,
                        },
                    },
                ],
                lens_override: None,
                binding: None,
                span: Span {
                    start: 9,
                    end: 66,
                },
            },
            source_stmt: 0,
        },
        CompileStep {
            verb_call: VerbCall {
                domain: "screening",
                verb: "sanctions",
                arguments: [
                    Argument {
                        key: "entity-id",
                        value: SymbolRef {
                            name: "entity",
                            span: Span {
                                start: 107,
                                end: 114,
                            },
                        },
                        span: Span {
                            start: 96,
                            end: 114,
                        },
                    },
                ],
                lens_override: None,
                binding: None,
                span: Span {
                    start: 75,
                    end: 115,
                },
            },
            source_stmt: 1,
        },
        CompileStep {
            verb_call: VerbCall {
                domain: "screening",
                verb: "adverse-media",
                arguments: [
                    Argument {
                        key: "entity-id",
                        value: SymbolRef {
                            name: "entity",
                            span: Span {
                                start: 160,
                                end: 167,
                            },
                        },
                        span: Span {
                            start: 149,
                            end: 167,
                        },
                    },
                    Argument {
                        key: "depth",
                        value: Literal(
                            String(
                                "full",
                            ),
                            Span {
                                start: 175,
                                end: 181,
                            },
                        ),
                        span: Span {
                            start: 168,
                            end: 181,
                        },
                    },
                ],
                lens_override: None,
                binding: None,
                span: Span {
                    start: 124,
                    end: 182,
                },
            },
            source_stmt: 2,
        },
        CompileStep {
            verb_call: VerbCall {
                domain: "screening",
                verb: "refresh",
                arguments: [
                    Argument {
                        key: "entity-id",
                        value: SymbolRef {
                            name: "entity",
                            span: Span {
                                start: 221,
                                end: 228,
                            },
                        },
                        span: Span {
                            start: 210,
                            end: 228,
                        },
                    },
                    Argument {
                        key: "force",
                        value: Literal(
                            Boolean(
                                true,
                            ),
                            Span {
                                start: 236,
                                end: 240,
                            },
                        ),
                        span: Span {
                            start: 229,
                            end: 240,
                        },
                    },
                ],
                lens_override: None,
                binding: None,
                span: Span {
                    start: 191,
                    end: 241,
                },
            },
            source_stmt: 3,
        },
    ],
    errors: [],
}
