crates/dsl-core/tests/snapshots/dag_golden__dag_trading_profile_setup.snap
---
source: crates/dsl-core/tests/dag_golden.rs
expression: compiled
---
CompiledSteps {
    steps: [
        CompileStep {
            verb_call: VerbCall {
                domain: "trading-profile",
                verb: "set-instrument",
                arguments: [
                    Argument {
                        key: "cbu-id",
                        value: SymbolRef {
                            name: "cbu",
                            span: Span {
                                start: 49,
                                end: 53,
                            },
                        },
                        span: Span {
                            start: 41,
                            end: 53,
                        },
                    },
                    Argument {
                        key: "instrument-type",
                        value: Literal(
                            String(
                                "equity",
                            ),
                            Span {
                                start: 71,
                                end: 79,
                            },
                        ),
                        span: Span {
                            start: 54,
                            end: 79,
                        },
                    },
                    Argument {
                        key: "venue",
                        value: Literal(
                            String(
                                "LSE",
                            ),
                            Span {
                                start: 87,
                                end: 92,
                            },
                        ),
                        span: Span {
                            start: 80,
                            end: 92,
                        },
                    },
                    Argument {
                        key: "enabled",
                        value: Literal(
                            Boolean(
                                true,
                            ),
                            Span {
                                start: 102,
                                end: 106,
                            },
                        ),
                        span: Span {
                            start: 93,
                            end: 106,
                        },
                    },
                ],
                lens_override: None,
                binding: None,
                span: Span {
                    start: 9,
                    end: 107,
                },
            },
            source_stmt: 0,
        },
        CompileStep {
            verb_call: VerbCall {
                domain: "trading-profile",
                verb: "set-instrument",
                arguments: [
                    Argument {
                        key: "cbu-id",
                        value: SymbolRef {
                            name: "cbu",
                            span: Span {
                                start: 156,
                                end: 160,
                            },
                        },
                        span: Span {
                            start: 148,
                            end: 160,
                        },
                    },
                    Argument {
                        key: "instrument-type",
                        value: Literal(
                            String(
                                "bond",
                            ),
                            Span {
                                start: 178,
                                end: 184,
                            },
                        ),
                        span: Span {
                            start: 161,
                            end: 184,
                        },
                    },
                    Argument {
                        key: "venue",
                        value: Literal(
                            String(
                                "LuxSE",
                            ),
                            Span {
                                start: 192,
                                end: 199,
                            },
                        ),
                        span: Span {
                            start: 185,
                            end: 199,
                        },
                    },
                    Argument {
                        key: "enabled",
                        value: Literal(
                            Boolean(
                                true,
                            ),
                            Span {
                                start: 209,
                                end: 213,
                            },
                        ),
                        span: Span {
                            start: 200,
                            end: 213,
                        },
                    },
                ],
                lens_override: None,
                binding: None,
                span: Span {
                    start: 116,
                    end: 214,
                },
            },
            source_stmt: 1,
        },
        CompileStep {
            verb_call: VerbCall {
                domain: "trading-profile",
                verb: "enable",
                arguments: [
                    Argument {
                        key: "cbu-id",
                        value: SymbolRef {
                            name: "cbu",
                            span: Span {
                                start: 255,
                                end: 259,
                            },
                        },
                        span: Span {
                            start: 247,
                            end: 259,
                        },
                    },
                    Argument {
                        key: "instrument",
                        value: Literal(
                            String(
                                "fx",
                            ),
                            Span {
                                start: 272,
                                end: 276,
                            },
                        ),
                        span: Span {
                            start: 260,
                            end: 276,
                        },
                    },
                    Argument {
                        key: "enabled",
                        value: Literal(
                            Boolean(
                                false,
                            ),
                            Span {
                                start: 286,
                                end: 291,
                            },
                        ),
                        span: Span {
                            start: 277,
                            end: 291,
                        },
                    },
                ],
                lens_override: None,
                binding: None,
                span: Span {
                    start: 223,
                    end: 292,
                },
            },
            source_stmt: 2,
        },
    ],
    errors: [],
}
