crates/dsl-core/tests/snapshots/dag_golden__dag_two_independent_screenings.snap
---
source: crates/dsl-core/tests/dag_golden.rs
expression: compiled
---
CompiledSteps {
    steps: [
        CompileStep {
            verb_call: VerbCall {
                domain: "screening",
                verb: "pep",
                arguments: [
                    Argument {
                        key: "entity-id",
                        value: SymbolRef {
                            name: "director",
                            span: Span {
                                start: 35,
                                end: 44,
                            },
                        },
                        span: Span {
                            start: 24,
                            end: 44,
                        },
                    },
                ],
                lens_override: None,
                binding: None,
                span: Span {
                    start: 9,
                    end: 45,
                },
            },
            source_stmt: 0,
        },
        CompileStep {
            verb_call: VerbCall {
                domain: "screening",
                verb: "sanctions",
                arguments: [
                    Argument {
                        key: "entity-id",
                        value: SymbolRef {
                            name: "director",
                            span: Span {
                                start: 86,
                                end: 95,
                            },
                        },
                        span: Span {
                            start: 75,
                            end: 95,
                        },
                    },
                ],
                lens_override: None,
                binding: None,
                span: Span {
                    start: 54,
                    end: 96,
                },
            },
            source_stmt: 1,
        },
    ],
    errors: [],
}
